Improved support for StringIds when the IDs are URLs.